feat: add multitple server support

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,5 +4,5 @@ services:
     environment:
       DISCORD_TOKEN: ${DISCORD_TOKEN}
       RIOT_TOKEN: ${RIOT_TOKEN}
-      SERVER: "eun1"
       REGION: "europe"
+      DEFAULT_SERVER: "EUNE"
